--- a/keymap.conf
+++ b/keymap.conf
@@ -17,7 +17,8 @@ SKK_LEFT		hex::0x1c||ctrl::b||keycode::7b
 SKK_RIGHT		hex::0x1d||ctrl::f||keycode::7c
 SKK_UP			hex::0x1e||ctrl::a||keycode::7e
 SKK_DOWN		hex::0x1f||ctrl::e||keycode::7d
-SKK_PING		ctrl::l
+# SKK_PING		ctrl::l
+SKK_PING		ctrl::p
 SKK_UNDO        ctrl::/
 
 # ======================================================================
@@ -27,9 +28,9 @@ SKK_UNDO        ctrl::/
 ToggleKana				q
 ToggleJisx0201Kana		ctrl::q
 # SwitchToAscii			l
-SwitchToAscii			x
+SwitchToAscii			ctrl::l
 # SwitchToJisx0208Latin	L
-SwitchToJisx0208Latin	X
+SwitchToJisx0208Latin	ctrl::alt::l
 
 EnterAbbrev			/
 EnterJapanese		Q
@@ -40,14 +41,14 @@ NextCandidate		hex::0x20||alt::j
 # PrevCandidate		x||ctrl::p
 PrevCandidate		alt::k
 # RemoveTrigger		X
-RemoveTrigger		ctrl::k
+RemoveTrigger		x
 
 UpperCases		group::A-K,M-P,R-Z
 Direct			group::keycode::0x41,0x43,0x45,0x4b,0x4e,0x51-0x59,0x5b,0x5c,0x5f
 InputChars      group::hex::0x20-0x7e
 
 # CompConversion	alt::hex::0x20||shift::hex::0x20
-CompConversion		alt::c
+CompConversion		alt::f
 
 # ======================================================================
 # handle option
